# napari_mask-reviewer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
src/: napari-mask-correction.py
src/napari_mask_reviewer/: MANIFEST.in  __init__.py  _debug_utils.py  _widget.py  _widget_working.py  napari.yaml
